= Changelog
:toc:

== v0.25.3: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Fixes

* When using `opt.Self`, if name is empty, use `filepath.Base(os.Args[0])`.

== v0.25.2: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Fixes

* Fix bug when running in `SingleDash` mode, if calling a single letter option with a single dash, and the option expects a value and the value wasn't provided with `=` or as a bundle then the option value wouldn't get registered.

== v0.25.1: Minor Fixes

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Minor changes

* When `HelpCommand` is declared, inject a `help` subcommand to all commands, not just the ones that have children.
This really simplifies discoverabilty for new users.

=== Fixes

* Maintain order of unknown options intermingled with arguments.
When using getoptions.Pass ensure that unknown options are passthrough in the same order they were given.
This is useful when doing wrappers.

== v0.25.0: Major Refactor

As the releases before, this release has 100% test coverage.
Tested with Go 1.14, 1.15, 1.16 and Go 1.17.

=== Goal

This refactor brings major benefits in both parsing and autocompletion.
In the initial implementation, completion was added as side logic to the existing parser code.
In this implementation, completions are a first class citizen and share the same parsing tree structure that the rest of the library is using.

The parsing tree was refactored from the ground up to better accommodate commands and subcommands and also the extra use cases that have been popping up ever since autocompletion support was added.
